--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <h1>Welcome to Learning Java</h1>
     <a href="ioStreams.html">IO Streams</a>
     <a href="exceptions.html">Exceptions</a>
+    <a href="protocols.html">Protocols</a>
   </div>
 </body>
 </html>
